kubernetes/deployment.yaml
# message-bus
---
apiVersion: v1
kind: Service
metadata:
  name: message-bus
  labels:
    app: message-bus
spec:
  ports:
  - name: message-bus
    port: 5672
  - name: management
    port: 15672
  selector:
    app: message-bus
    tier: rabbitmq
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: message-bus
  labels:
    app: message-bus
spec:
  selector:
    matchLabels:
      app: message-bus
      tier: rabbitmq
  replicas: 1
  strategy: {}
  template:
    metadata:
      labels:
        app: message-bus
        tier: rabbitmq
    spec:
      containers:
      - name: rabbitmq
        image: rabbitmq:3-management
        ports:
        - containerPort: 5672
        - containerPort: 15672

# cashier-service
---
apiVersion: v1
kind: Service
metadata:
  name: cashier-service
  labels:
    app: cashier-service
spec:
  ports:
  - name: http
    port: 5000
  selector:
    app: cashier-service
    tier: api
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cashier-service
  labels:
    app: cashier-service
  annotations:
    traefik.backend: cashier-service
    traefik.enable: "false"
    traefik.frontend.rule: PathPrefix:/cashier/
    traefik.port: "5000"
spec:
  selector:
    matchLabels:
      app: cashier-service
      tier: api
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: cashier-service
        tier: api
    spec:
      containers:
      - name: cashier-service
        image: aklearning/eng-lab-cashier-service
        ports:
        - containerPort: 5000

# customer-service
---
apiVersion: v1
kind: Service
metadata:
  name: customer-service-db
  labels:
    app: customer-service
spec:
  ports:
  - port: 5432
  selector:
    app: customer-service
    tier: postgresql
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-service-db
  labels:
    app: customer-service
spec:
  selector:
    matchLabels:
      app: customer-service
      tier: postgresql
  replicas: 1
  template:
    metadata:
      labels:
        app: customer-service
        tier: postgresql
    spec:
      containers:
      - image: postgres:latest
        name: postgresql
        ports:
        - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: customer-service
  labels:
    app: customer-service
spec:
  ports:
  - name: http
    port: 5000
  selector:
    app: customer-service
    tier: api
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-service
  labels:
    app: customer-service
  annotations:
    traefik.backend: customer-service
    traefik.enable: "false"
    traefik.frontend.rule: PathPrefix:/customers/
    traefik.port: "5000"
spec:
  selector:
    matchLabels:
      app: customer-service
      tier: api
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: customer-service
        tier: api
    spec:
      containers:
      - name: customer-service
        image: aklearning/eng-lab-customer-service
        ports:
        - containerPort: 5000

# account-service
---
apiVersion: v1
kind: Service
metadata:
  name: account-service-db
  labels:
    app: account-service
spec:
  ports:
  - port: 5432
  selector:
    app: account-service
    tier: postgresql
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-service-db
  labels:
    app: account-service
spec:
  selector:
    matchLabels:
      app: account-service
      tier: postgresql
  replicas: 1
  template:
    metadata:
      labels:
        app: account-service
        tier: postgresql
    spec:
      containers:
      - image: postgres:latest
        name: postgresql
        ports:
        - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: account-service
  labels:
    app: account-service
spec:
  ports:
  - name: http
    port: 5000
  selector:
    app: account-service
    tier: api
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-service
  labels:
    app: account-service
    tier: api
  annotations:
    traefik.backend: account-service
    traefik.enable: "true"
    traefik.frontend.rule: PathPrefix:/accounts/
    traefik.port: "5000"
spec:
  selector:
    matchLabels:
      app: account-service
      tier: api
  replicas: 1
  template:
    metadata:
      labels:
        app: account-service
        tier: api
    spec:
      containers:
      - name: account-service
        image: aklearning/eng-lab-account-service
        ports:
        - containerPort: 5000
      restartPolicy: Always

# transaction-service
---
apiVersion: v1
kind: Service
metadata:
  name: transaction-service-db
  labels:
    app: transaction-service
spec:
  ports:
  - port: 5432
  selector:
    app: transaction-service
    tier: postgresql
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transaction-service-db
  labels:
    app: transaction-service
spec:
  selector:
    matchLabels:
      app: transaction-service
      tier: postgresql
  replicas: 1
  template:
    metadata:
      labels:
        app: transaction-service
        tier: postgresql
    spec:
      containers:
      - name: postgresql
        image: postgres:latest
        ports:
        - containerPort: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transaction-service
  labels:
    app: transaction-service
spec:
  selector:
    matchLabels:
      app: transaction-service
      tier: api
  replicas: 1
  template:
    metadata:
      labels:
        app: transaction-service
        tier: api
    spec:
      containers:
      - image: aklearning/eng-lab-transaction-service
        name: transaction-service
---
apiVersion: v1
kind: Service
metadata:
  name: balance-service-store
  labels:
    app: balance-service
spec:
  ports:
  - port: 6379
  selector:
    app: balance-service
    tier: redis
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: balance-service-store
  labels:
    app: balance-service
spec:
  selector:
    matchLabels:
      app: balance-service
      tier: redis
  replicas: 1
  strategy: {}
  template:
    metadata:
      labels:
        app: balance-service
        tier: redis
    spec:
      containers:
      - image: redis
        name: redis
        ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: balance-service
  labels:
    app: balance-service
spec:
  ports:
  - name: http
    port: 5000
  selector:
    app: balance-service
    tier: api
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: balance-service
  labels:
    app: balance-service
  annotations:
    traefik.backend: balance-app
    traefik.enable: "true"
    traefik.frontend.rule: PathPrefix:/balance/
    traefik.port: "5000"
spec:
  selector:
    matchLabels:
      app: balance-service
      tier: api
  replicas: 1
  template:
    metadata:
      labels:
        app: balance-service
        tier: api
    spec:
      containers:
      - image: aklearning/eng-lab-balance-service
        name: balance-service
        ports:
        - containerPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: balance-worker
  labels:
    app: balance-service
spec:
  selector:
    matchLabels:
      app: balance-service
      tier: worker
  replicas: 1
  template:
    metadata:
      labels:
        app: balance-service
        tier: worker
    spec:
      containers:
      - image: aklearning/eng-lab-balance-worker
        name: balance-service
